--- a/altair-demo.ipynb
+++ b/altair-demo.ipynb
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e91f5a2812e84afc8324a20d651c268c",
+       "model_id": "1aadcee1c4574ba2a85891eb86a681c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0157b4de8194aa6861391c86ec0d960",
+       "model_id": "dfdcfcb0abd84fd89d22a84438d96f25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dfb011b0f6a48b9bf1fafee8bf7ba00",
+       "model_id": "56254d9120a7428a86117b5aee154f10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,23 +114,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-4bb8cfc86a7c461b9df86d160267bbaa.vega-embed {\n",
+       "  #altair-viz-67341916add147678e8bacaf25e87427.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-4bb8cfc86a7c461b9df86d160267bbaa.vega-embed details,\n",
-       "  #altair-viz-4bb8cfc86a7c461b9df86d160267bbaa.vega-embed details summary {\n",
+       "  #altair-viz-67341916add147678e8bacaf25e87427.vega-embed details,\n",
+       "  #altair-viz-67341916add147678e8bacaf25e87427.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-4bb8cfc86a7c461b9df86d160267bbaa\"></div>\n",
+       "<div id=\"altair-viz-67341916add147678e8bacaf25e87427\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-4bb8cfc86a7c461b9df86d160267bbaa\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-4bb8cfc86a7c461b9df86d160267bbaa\");\n",
+       "    if (outputDiv.id !== \"altair-viz-67341916add147678e8bacaf25e87427\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-67341916add147678e8bacaf25e87427\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -176,7 +176,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"url\": \"https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/us-10m.json\", \"format\": {\"feature\": \"counties\", \"type\": \"topojson\"}}, \"mark\": {\"type\": \"geoshape\"}, \"encoding\": {\"color\": {\"field\": \"rate\", \"scale\": {\"range\": [\"#ffffff\", \"#fffeff\", \"#fffdff\", \"#fefdff\", \"#fefcff\", \"#fefbff\", \"#fefaff\", \"#fdf9ff\", \"#fdf8fe\", \"#fdf8fe\", \"#fdf7fe\", \"#fcf6fe\", \"#fcf5fe\", \"#fcf4fe\", \"#fcf3fe\", \"#fbf2fe\", \"#fbf1fe\", \"#fbf0fe\", \"#faeffe\", \"#faedfd\", \"#faecfd\", \"#f9ebfd\", \"#f9eafd\", \"#f9e9fd\", \"#f8e8fd\", \"#f8e6fd\", \"#f7e5fd\", \"#f7e4fc\", \"#f7e2fc\", \"#f6e1fc\", \"#f6dffc\", \"#f5defc\", \"#f5ddfb\", \"#f4dbfb\", \"#f4dafb\", \"#f3d8fb\", \"#f3d6fb\", \"#f2d5fa\", \"#f2d3fa\", \"#f1d1fa\", \"#f1d0f9\", \"#f0cef9\", \"#f0ccf9\", \"#efcaf9\", \"#eec8f8\", \"#eec6f8\", \"#edc5f7\", \"#ecc3f7\", \"#ebc1f7\", \"#ebbff6\", \"#eabdf6\", \"#e9bbf5\", \"#e8b9f4\", \"#e8b6f4\", \"#e7b4f3\", \"#e6b2f2\", \"#e5b0f2\", \"#e4aef1\", \"#e3acf0\", \"#e2aaef\", \"#e1a7ee\", \"#dfa5ed\", \"#dea3eb\", \"#dda1e9\", \"#db9fe8\", \"#d99de5\", \"#d79be3\", \"#d59ae1\", \"#d299de\", \"#cf98dd\", \"#cc98db\", \"#ca98db\", \"#c899db\", \"#c599db\", \"#c399db\", \"#c199dc\", \"#bf99dc\", \"#bd9add\", \"#bb9add\", \"#b99add\", \"#b89ade\", \"#b69ade\", \"#b49adf\", \"#b29bdf\", \"#b09bdf\", \"#ae9bdf\", \"#ac9bdf\", \"#aa9bdf\", \"#a89bdf\", \"#a59bde\", \"#a39bde\", \"#a19bdd\", \"#9f9adc\", \"#9d9adb\", \"#9a9adb\", \"#989ada\", \"#969ad9\", \"#949ad8\", \"#929ad7\", \"#9099d6\", \"#8e99d6\", \"#8c99d5\", \"#8a99d4\", \"#8899d4\", \"#8699d3\", \"#8499d3\", \"#8199d2\", \"#7f99d2\", \"#7d99d2\", \"#7b99d2\", \"#7999d1\", \"#7799d1\", \"#7599d1\", \"#7399d1\", \"#7099d0\", \"#6e99d0\", \"#6c99d0\", \"#6999d0\", \"#6799d0\", \"#6499d0\", \"#6199cf\", \"#5e99cf\", \"#5b99cf\", \"#5898cf\", \"#5498cf\", \"#5198ce\", \"#4d97ce\", \"#4997cd\", \"#4596cc\", \"#4196cb\", \"#3d95c9\", \"#3a94c8\", \"#3693c6\", \"#3392c4\", \"#3190c2\", \"#2e8fc0\", \"#2c8ebe\", \"#2b8dbc\", \"#298cb9\", \"#288ab7\", \"#2789b5\", \"#2688b3\", \"#2587b1\", \"#2485ae\", \"#2484ac\", \"#2383aa\", \"#2382a8\", \"#2381a6\", \"#237fa4\", \"#237ea1\", \"#237d9f\", \"#237c9d\", \"#237a9b\", \"#237999\", \"#237897\", \"#237795\", \"#237592\", \"#247490\", \"#24738e\", \"#24718c\", \"#25708a\", \"#256f88\", \"#266d86\", \"#266c84\", \"#276a82\", \"#276980\", \"#27677e\", \"#28667c\", \"#28647a\", \"#296378\", \"#296176\", \"#296075\", \"#295f73\", \"#2a5d71\", \"#2a5c70\", \"#2a5a6f\", \"#2a596d\", \"#2a576c\", \"#2a566b\", \"#29556a\", \"#295469\", \"#295268\", \"#295167\", \"#285066\", \"#284f66\", \"#274d65\", \"#274c64\", \"#264b64\", \"#264a63\", \"#254962\", \"#244862\", \"#244661\", \"#234561\", \"#224460\", \"#21435f\", \"#21415f\", \"#20405e\", \"#1f3f5d\", \"#1e3e5c\", \"#1d3c5c\", \"#1c3b5b\", \"#1b395a\", \"#1a3859\", \"#193758\", \"#183557\", \"#173456\", \"#163254\", \"#153153\", \"#142f52\", \"#132d50\", \"#122c4f\", \"#112a4d\", \"#10294b\", \"#0f274a\", \"#0e2548\", \"#0d2446\", \"#0c2244\", \"#0b2142\", \"#0a1f40\", \"#091e3e\", \"#081c3c\"]}, \"type\": \"quantitative\"}}, \"height\": 220, \"projection\": {\"type\": \"albersUsa\"}, \"transform\": [{\"lookup\": \"id\", \"from\": {\"data\": {\"url\": \"https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/unemployment.tsv\"}, \"key\": \"id\", \"fields\": [\"rate\"]}}], \"width\": 300, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.16.3.json\"}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"url\": \"https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/us-10m.json\", \"format\": {\"feature\": \"counties\", \"type\": \"topojson\"}}, \"mark\": {\"type\": \"geoshape\"}, \"encoding\": {\"color\": {\"field\": \"rate\", \"scale\": {\"range\": [\"#ffffff\", \"#fffefd\", \"#fffdfc\", \"#fefcfa\", \"#fefbf8\", \"#fef9f7\", \"#fef8f5\", \"#fef7f3\", \"#fdf6f1\", \"#fdf5ef\", \"#fdf3ed\", \"#fdf2ec\", \"#fcf1ea\", \"#fcf0e8\", \"#fceee6\", \"#fcede4\", \"#fbece2\", \"#fbeae0\", \"#fbe9de\", \"#fae7dc\", \"#fae6d9\", \"#fae5d7\", \"#f9e3d5\", \"#f9e2d3\", \"#f8e0d1\", \"#f8dfce\", \"#f8ddcc\", \"#f7dcca\", \"#f7dac8\", \"#f6d8c5\", \"#f6d7c3\", \"#f5d5c0\", \"#f5d4be\", \"#f4d2bb\", \"#f4d0b9\", \"#f3ceb7\", \"#f2cdb4\", \"#f2cbb1\", \"#f1c9af\", \"#f0c8ac\", \"#efc6aa\", \"#eec4a7\", \"#eec2a5\", \"#edc0a2\", \"#ebbe9f\", \"#eabd9d\", \"#e9bb9a\", \"#e8b998\", \"#e6b795\", \"#e4b593\", \"#e2b491\", \"#e0b28f\", \"#deb18d\", \"#dbaf8c\", \"#d9ae8c\", \"#d7ae8b\", \"#d5ad8c\", \"#d3ad8c\", \"#d1ad8c\", \"#cfad8d\", \"#ceac8e\", \"#ccac8f\", \"#caac90\", \"#c9ac90\", \"#c8ac91\", \"#c6ac92\", \"#c5ac93\", \"#c4ac94\", \"#c2ac95\", \"#c1ac96\", \"#c0ac97\", \"#bfac98\", \"#bdac99\", \"#bcac99\", \"#bbac9a\", \"#b9ac9a\", \"#b8ac9b\", \"#b7ab9b\", \"#b6ab9c\", \"#b4ab9c\", \"#b3ab9c\", \"#b1aa9c\", \"#b0aa9c\", \"#afa99c\", \"#ada99c\", \"#aca89c\", \"#aba89c\", \"#a9a79c\", \"#a8a79c\", \"#a6a69c\", \"#a5a69c\", \"#a3a59b\", \"#a2a59b\", \"#a0a49b\", \"#9fa39a\", \"#9da39a\", \"#9ba29a\", \"#9aa199\", \"#98a199\", \"#96a098\", \"#959f98\", \"#939e97\", \"#919e97\", \"#909d96\", \"#8e9c96\", \"#8c9b95\", \"#8a9b95\", \"#889a94\", \"#879994\", \"#859893\", \"#839893\", \"#819792\", \"#7f9692\", \"#7d9591\", \"#7b9591\", \"#799490\", \"#779390\", \"#75928f\", \"#73918f\", \"#71918e\", \"#6f908d\", \"#6d8f8d\", \"#6b8e8c\", \"#688d8c\", \"#668c8b\", \"#648c8b\", \"#628b8a\", \"#608a8a\", \"#5d8989\", \"#5b8889\", \"#598788\", \"#568688\", \"#548587\", \"#518587\", \"#4f8487\", \"#4d8386\", \"#4a8286\", \"#488185\", \"#458085\", \"#437f84\", \"#417e84\", \"#3e7d84\", \"#3c7c83\", \"#3a7b83\", \"#387a83\", \"#367982\", \"#347882\", \"#327782\", \"#317681\", \"#2f7481\", \"#2e7380\", \"#2d7280\", \"#2b717f\", \"#2b707f\", \"#2a6f7e\", \"#296e7e\", \"#296c7d\", \"#296b7c\", \"#296a7b\", \"#29697a\", \"#296779\", \"#296678\", \"#296577\", \"#296376\", \"#296275\", \"#2a6174\", \"#2a6073\", \"#2a5e71\", \"#2a5d70\", \"#2a5c6f\", \"#2a5a6e\", \"#2a596d\", \"#2a586c\", \"#2a576b\", \"#2a566a\", \"#295469\", \"#295369\", \"#295268\", \"#295167\", \"#285066\", \"#284f66\", \"#274d65\", \"#274c64\", \"#264b64\", \"#264a63\", \"#254962\", \"#254862\", \"#244761\", \"#234661\", \"#224460\", \"#224360\", \"#21425f\", \"#20415e\", \"#1f405e\", \"#1f3f5d\", \"#1e3d5c\", \"#1d3c5c\", \"#1c3b5b\", \"#1b395a\", \"#1a3859\", \"#193758\", \"#183557\", \"#173456\", \"#163255\", \"#153153\", \"#142f52\", \"#132e51\", \"#122c4f\", \"#112b4e\", \"#10294c\", \"#0f284b\", \"#0e2649\", \"#0d2547\", \"#0c2346\", \"#0b2244\", \"#0b2042\", \"#0a1f40\", \"#091e3e\", \"#081c3c\"]}, \"type\": \"quantitative\"}}, \"height\": 220, \"projection\": {\"type\": \"albersUsa\"}, \"transform\": [{\"lookup\": \"id\", \"from\": {\"data\": {\"url\": \"https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/unemployment.tsv\"}, \"key\": \"id\", \"fields\": [\"rate\"]}}], \"width\": 300, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.16.3.json\"}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -190,13 +190,6 @@
    "source": [
     "draw_choropleth(cie.cmap)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
